--- a/HardwareEspecializado/package.json
+++ b/HardwareEspecializado/package.json
@@ -19,9 +19,11 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.1.0",
+    "dotenv": "^16.4.5",
     "expo": "~52.0.8",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-env": "^1.1.1",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
